remove upload from ticket
